--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,26 @@
     "name": "Toggl to OpenAir Timesheets",
     "short_name": "TogglToOpenAir",
     "author": "Gray Software Consulting",
-    "version": "1.0.23",
-    "description": "Takes time entries from Toggl and adds it to an open timesheet in OpenAir",
+    "version": "2.0",
+    "description": "Takes time entries from Toggl and adds it to an open timesheet in OpenAir. Updated to V9 Toggl APIs and V3 of Chrome extension manifest",
     "icons": {
         "48": "48-icon.png",
         "128": "128-icon.png"
     },
-    "permissions": ["activeTab", "declarativeContent", "storage", "webNavigation", "https://toggl.com/", "https://api.track.toggl.com/"],
-    "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'",
+    "permissions": ["activeTab", "declarativeContent", "storage", "webNavigation"],
+    "host_permissions": ["https://toggl.com/", "https://api.track.toggl.com/"],
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'"
+    },
     "background": {
-        "scripts": ["background.js"],
-        "persistent": false
+        "service_worker": "background.js"
     },
     "content_scripts": [{
         "matches": ["https://*.openair.com/timesheet.pl*"],
         "js": ["contentscript.js"]
     }],
-    "page_action": {
+    "action": {
         "default_popup": "popup.html"
     }, 
-    "manifest_version": 2
+    "manifest_version": 3
 }
