--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Toggl to OpenAir Timesheets",
     "short_name": "TogglToOpenAir",
-    "author": "Gray Software Consulting",
+    "author": "Gray Software Consulting + Sumeet Das",
     "version": "2.0",
     "description": "Takes time entries from Toggl and adds it to an open timesheet in OpenAir. Updated to V9 Toggl APIs and V3 of Chrome extension manifest",
     "icons": {
